--- a/style.css
+++ b/style.css
@@ -3,11 +3,23 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
 button {
     color: white;
     background-color: cornflowerblue;
     margin: 0.5rem;
+}
+
+.results {
+    box-sizing: content-box;
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
